Fixed PSM seo preview title overflowing bug

--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -234,6 +234,10 @@
     line-height: 1.35em;
 }
 
+.settings-menu-content .gh-seo-preview-title {
+    white-space: inherit;
+}
+
 .settings-menu-content .CodeMirror {
     height: 170px;
     min-height: 170px;
